--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "file-system": "^2.2.2",
+    "markdown-it": "^14.1.0",
+    "node-html-markdown": "^1.3.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^16.0.1",
